@@ -357,7 +357,7 @@ class ImportTest(unittest.TestCase):
     def test_quiet_timid_disallowed(self):
         self.assertRaises(ui.UserError, commands.import_files,
                           None, [], False, False, False, None, False, False,
-                          False, False, True, False, None, False, True)
+                          False, False, True, False, None, False, True, None)
 
 class InputTest(unittest.TestCase):
     def setUp(self):
