@@ -12,6 +12,9 @@
   the items are no longer duplicated -- instead, the library is
   updated to reflect the new metadata. This way, the import command
   can be transparently used as a "re-import".
+* Relatedly, the -L flag to the "import" command makes it take a query
+  as its argument instead of a list of directories. The matched albums
+  (or items, depending on the -s flag) are then re-imported.
 * When pruning directories, "clutter" files such as .DS_Store and
   Thumbs.db are ignored (and removed with otherwise-empty
   directories).
